--- a/index.html
+++ b/index.html
@@ -4,20 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="CSS/reset.css">
+    <link rel="stylesheet" href="CSS/style-QrCode.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat&family=Outfit:wght@400;700&display=swap">
     <title>QR code component</title>
 </head>
 <body>
-<div class="conteiner">
-    <div class="imagem">
-        <img src="imagens/imageQrCode.png" alt="QR code">
-        <div class="texto">
-            <h2>Improve your front-end skills by building projects</h2>
-            <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+    <!--Menu para acesso geral-->
+    <header>
+        <div class="container-header">
+            <nav class="nav-header">  
+                <li><a href="index.html">Home</a></li>
+            </nav>
         </div>
-    </div>    
-</div>
+    </header>
+    <main>
+        <div class="container"> <!--1º seção d -->
+            <div class="box">
+                <div class="imagem">
+                    <img src="imagens/imageQrCode.png" alt="QR Code" class="imagem">
+                    <div class="text">
+                        <h2>Improve your front-end skills by building projects</h2>
+                        <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>    
 </body>
 </html>
