Adição do manu de navegação e ajuste das propriedados no CSS

--- a/home.html
+++ b/home.html
@@ -9,6 +9,14 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap">
 </head>
 <body>
+    <header>
+        <div class="container-header">
+            <nav class="nav-header">  
+                <li><a href="index.html">Home</a></li>
+                <li><a href="QR1.htm">Qr code</a></li>
+            </nav>
+        </div>
+    </header>
     
 </body>
 </html>
