--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </section>
 
         <section id="qrCode">
-            <div class="container"> <!--1º seção d -->
+            <div class="container">
                 <div class="box">
                     <div class="imagem">
                         <img src="/Assents/icons/qrcode_github.com.png" alt="QR Code" class="imagem">
