--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="container">
                 <div class="box">
                     <div class="imagem">
-                        <img src="/Assents/icons/qrcode_github.com.png" alt="QR Code" class="imagem">
+                        <img src="./Assents/icons/qrcode_github.com.png" alt="QR Code" class="imagem">
                         <div class="text">
                             <h2>2º Projeto finalizado.</h2>
                             <p>Escanei o código QR para visitar meu perfil no GitHub</p>
